# app_patchupdate

TextApp/app_update/app/: build.gradle
TextApp/app_update/app/src/main/: AndroidManifest.xml
TextApp/app_update/app/src/main/jni/: CMakeLists.txt  bspatch.c
TextApp/app_update/gradle/wrapper/: gradle-wrapper.properties
generateLinuxSo/: bsdiff.c
generatePatch_LinuxSerlvet/app_update_server/: .project
generatePatch_LinuxSerlvet/app_update_server/src/com/dongnaoedu/bsdiff/: BsDiff.java  BsDiffTest.java  ConstantsLinux.java
generatePtach_JavaServlet/app_update_server/: .project
generatePtach_JavaServlet/app_update_server/src/: com_jiege_bsdiff_BsDiff.h
generatePtach_JavaServlet/app_update_server/src/com/jiege/bsdiff/: BsDiff.java  BsDiffText.java
generateWindll/bsdiff/: bsdiff.opensdf  bsdiff.sln
generateWindll/bsdiff/Debug/: bsdiff.ilk
generateWindll/bsdiff/bsdiff/: bsdiff.cpp  bsdiff.vcxproj  bsdiff.vcxproj.filters  bzlib.c  com_jiege_bsdiff_BsDiff.h
generateWindll/bsdiff/bsdiff/Debug/: vc120.idb
generateWindll/bsdiff/bsdiff/Debug/bsdiff.tlog/: CL.read.1.tlog  CL.write.1.tlog  bsdiff.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
generateWindll/bsdiff/bsdiff/x64/Debug/: vc120.idb
generateWindll/bsdiff/bsdiff/x64/Debug/bsdiff.tlog/: CL.read.1.tlog  CL.write.1.tlog  bsdiff.lastbuildstate  bsdiff.write.1u.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
generateWindll/bsdiff/x64/Debug/: bsdiff.exp  bsdiff.ilk  bsdiff.lib
(+9 files in other folders)
